--- a/testes/css/estilo.css
+++ b/testes/css/estilo.css
@@ -1,52 +1,77 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: Helvetica;
-    text-decoration: none;
-    font-size: 1.2rem;
+    box-sizing: border-box;
+}
 
+/* Estilos gerais do corpo do docuento */
+body {
+    font-family: 'Open Sans', sans-serif;
+    line-height: 1.6;
+    color: #333;
+    background-color: #f9f9f9;
+    padding-bottom: 50px;
 }
 
 header {
-    background-color: #000000;
-    padding: 120px;
+    background: linear-gradient(45deg, #6e48aa, #4776E6);
+    color: white;
+    text-align: center;
+    padding: 2rem 1rem;
 }
 
 header h1 {
-    color: #ffffff;
-    text-align: left;
-    margin-top: 50px;
-    margin-left: 50px;
-    margin-right: 50px;
-    margin-bottom: 0px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 2.5rem;
+    margin-bottom: 0.3rem;
 }
 
-nav  {
-    background-color: #000000;
-    text-align: left;
+header p {
+    font-weight: 300;
     font-size: 1.2rem;
+    opacity: 0.9;
+}
+
+nav {
+    background-color: #333;
+    padding: 1rem 0;
+    position: sticky;
+    top: 0;
+    z-index: 100;
+}
+
+nav ul {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+
+nav li {
+    margin: 0 1rem;
 }
 
 nav a {
-    color: #ffffff;
-    margin: 0px 20px;
-    padding: 0px 20px;
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 0.5rem 1rem;
+    border-radius: 4px;
+    transition: all 0.3s ease;
 }
 
 nav a:hover {
-    color: #fcfc00;
-}
-footer {
-    background-color: black;
-    color: #ffffff;
-    text-align: center;
+    background-color: #9d50bb;
 }
 
-.box2 {
-    position: absolute;
-    top: 60px;
-    right: 60px;
-    width: 600px; height: 300px;
-    background-color: lightcoral; 
-    border-radius: 8px;
+footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 2rem;
+    margin-top: 3rem;
+}
+
+footer p {
+    margin-bottom: 0.5rem;
 }
